--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "utility for querying against a network",
   "main": "query.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
