--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-    "extends": "airbnb-base",
+    "extends": "airbnb",
     "env": {
-        "browser": false,
+        "browser": true,
         "commonjs": false,
         "es6": true,
         "node": true
