--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
         "es6": true,
         "node": true
     },
+    "root": true,
     "parserOptions": {
         "ecmaVersion": 2018,
         "ecmaFeatures": {
