--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/codaco/networkQuery#readme",
   "devDependencies": {
-    "@codaco/shared-consts": "^0.0.1-alpha.1",
+    "@codaco/shared-consts": "^0.0.1-alpha.3",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.6.0"
+    "jest": "29.1.1"
   },
   "jest": {
     "testMatch": [
