--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "query.js",
   "scripts": {
     "lint": "eslint *.js",
-    "test": "jest --transformIgnorePatterns \"node_modules/(?!@codaco/shared-consts)/\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codaco/networkQuery.git"
+  },
+  "engines": {
+    "node": "^14.15.0 || ^16.10.0 || >=18.0.0"
   },
   "author": "Complex Data Collective",
   "bugs": {
@@ -21,7 +24,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "jest": "29.1.1"
+    "jest": "^29.1.1"
   },
   "jest": {
     "testMatch": [
